[package]
name = "my-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raqote = "0.8.0"
minifb = "0.20.0"
font-kit = "0.7"
image = "0.23.14"
cairo-rs = {version = "0.14.9", features = ["png"]}
png = "0.17.2"
